# EmailAttributesExtractor

./: .gitignore  AttributesHolder.cpp  AttributesHolder.h  CMakeLists.txt  ExtractFromFiles.cpp  ExtractFromFiles.h  GlobalHeader.h  GlobalSetting.cpp  GlobalSetting.h  README  main.cpp  output_fields.txt
